--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -15,4 +16,14 @@ nav{
   padding-left: 10px;
   color: #fff;
   background: #080808;
+}
+
+h1{
+  font-family: "Roboto", serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-size: 2em;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
